generated-tests/tests/snapshots/tsx/test_generated_break_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
for (let i = 0; i < 10; i++) { break; }

AST:
(program
  (for_statement
    initializer: (lexical_declaration
      (variable_declarator
        name: (identifier "i")
        value: (number "0")
      )
    )
    condition: (expression_statement
      (binary_expression
        left: (identifier "i")
        right: (number "10")
      )
    )
    increment: (update_expression
      argument: (identifier "i")
    )
    body: (statement_block
      (break_statement)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "i",
            position: Position {
                start_line: 1,
                start_column: 10,
                end_line: 1,
                end_column: 11,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "i",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 18,
            },
        },
        Usage {
            name: "i",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 25,
                end_line: 1,
                end_column: 26,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
