generated-tests/tests/snapshots/tsx/test_generated_conditional_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
type Test<T> = T extends string ? number : boolean; const value5: Test<string> = 42;

AST:
(program
  (type_alias_declaration
    name: (type_identifier "Test")
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier "T")
      )
    )
    value: (conditional_type
      left: (type_identifier "T")
      right: (predefined_type "string")
      consequence: (predefined_type "number")
      alternative: (predefined_type "boolean")
    )
  )
  (lexical_declaration
    (variable_declarator
      name: (identifier "value5")
      type: (type_annotation
        (generic_type
          name: (type_identifier "Test")
          type_arguments: (type_arguments
            (predefined_type "string")
          )
        )
      )
      value: (number "42")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Test",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 10,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "T",
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 12,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "value5",
            position: Position {
                start_line: 1,
                start_column: 59,
                end_line: 1,
                end_column: 65,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "T",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 16,
                end_line: 1,
                end_column: 17,
            },
        },
        Usage {
            name: "Test",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 67,
                end_line: 1,
                end_column: 71,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
