generated-tests/tests/snapshots/tsx/test_generated_constructor_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const ctor: new () => object = class {};

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier ctor)
      (type_annotation
        (constructor_type
          (formal_parameters)
          (predefined_type)
        )
      )
      (class
        (class_body)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "ctor",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
