generated-tests/tests/snapshots/tsx/test_generated_declaration.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const declaration = value;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier declaration)
      (identifier value)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "declaration",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "declaration",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 7,
            end_line: 1,
            end_column: 18,
        },
        SerializableUsage {
            name: "value",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 21,
            end_line: 1,
            end_column: 26,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
